--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>FizzBuzz</title>
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
-        <h1>ciao</h1>
+        <div class="container">
+            <div>
+                <h1>FizzBuzzDOM</h1>
+            </div>
+            <div class="card">
+                <ul id="output">
+                </ul>
+            </div>
+        </div>
         <script src="./assets/js/main.js"></script>
     </body>
 </html>
