--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             </div>
             <div class="card">
                 <ul id="output">
+                    <!-- <li class="red">1</li>
+                    <li>2</li>
+                    <li>3</li> -->
                 </ul>
             </div>
         </div>
